--- a/style.scss
+++ b/style.scss
@@ -143,3 +143,51 @@ main{
         cursor: pointer;
     }
 }
+
+@media(max-width:600px){
+
+    main{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        .mystory{
+            .story{
+                img{
+                    width: 80px;
+                }
+                .name{
+                    h2{
+                        font-size: 1.2em;
+                    }
+                    p{
+                        font-size: 1em;
+                    }
+                }
+            }
+        }
+        .stories{
+            .story{
+                img{
+                    width: 80px;
+                }
+                .name{
+                    h2{
+                        font-size: 1.2em;
+                    }
+                    p{
+                        font-size: 1em;
+                    }
+                }
+            }
+        }
+    }
+    .modal{
+        i{
+            width: 50px;
+            height: 50px;
+            font-size: 1.5em;
+            top: 1%;
+            left: 85%;
+        }
+    }
+}
